ch_19_adv_features : unsafe() code rev 2

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
@@ -599,6 +599,510 @@
     "    }\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-6: Using unsafe code in the implementation of the split_at_mut  \n",
+    "function\n",
+    "\n",
+    "Recall from “The Slice Type” section in Chapter 4 that slices are a pointer to  \n",
+    "some data and the length of the slice. We use the len method to get the length  \n",
+    "of a slice and the as_mut_ptr method to access the raw pointer of a slice. In  \n",
+    "this case, because we have a mutable slice to i32 values, as_mut_ptr returns a  \n",
+    "raw pointer with the type *mut i32, which we’ve stored in the variable ptr.\n",
+    "\n",
+    "We keep the assertion that the mid index is within the slice. Then we get to the  \n",
+    "unsafe code: the slice::from_raw_parts_mut function takes a raw pointer and a  \n",
+    "length, and it creates a slice. We use this function to create a slice that  \n",
+    "starts from ptr and is mid items long. Then we call the add method on ptr with  \n",
+    "mid as an argument to get a raw pointer that starts at mid, and we create a  \n",
+    "slice using that pointer and the remaining number of items after mid as the  \n",
+    "length.\n",
+    "\n",
+    "The function slice::from_raw_parts_mut is unsafe because it takes a raw pointer  \n",
+    "and must trust that this pointer is valid. The add method on raw pointers is  \n",
+    "also unsafe, because it must trust that the offset location is also a valid  \n",
+    "pointer. Therefore, we had to put an unsafe block around our calls to  \n",
+    "slice::from_raw_parts_mut and add so we could call them. By looking at the code  \n",
+    "and by adding the assertion that mid must be less than or equal to len, we can  \n",
+    "tell that all the raw pointers used within the unsafe block will be valid  \n",
+    "pointers to data within the slice. This is an acceptable and appropriate use of  \n",
+    "unsafe.\n",
+    "\n",
+    "Note that we don’t need to mark the resulting split_at_mut function as unsafe,  \n",
+    "and we can call this function from safe Rust. We’ve created a safe abstraction  \n",
+    "to the unsafe code with an implementation of the function that uses unsafe code  \n",
+    "in a safe way, because it creates only valid pointers from the data this  \n",
+    "function has access to.\n",
+    "\n",
+    "In contrast, the use of slice::from_raw_parts_mut in Listing 19-7 would likely  \n",
+    "crash when the slice is used. This code takes an arbitrary memory location and  \n",
+    "creates a slice 10,000 items long."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "address dec : 4660\n",
+      "address hex : 1234\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Segmentation fault.\n",
+      "   0: backtrace::capture::Backtrace::new\n",
+      "   1: evcxr::runtime::Runtime::install_crash_handlers::segfault_handler\n",
+      "   3: core::fmt::builders::DebugInner::entry\n",
+      "   4: core::fmt::builders::DebugInner::entry\n",
+      "   5: core::fmt::builders::DebugList::entry\n",
+      "   6: <&T as core::fmt::Debug>::fmt\n",
+      "   7: core::fmt::write\n",
+      "   2: __platform_memmove\n",
+      "   8: <&std::io::stdio::Stdout as std::io::Write>::write_fmt\n",
+      "  10: std::panicking::try\n",
+      "   9: std::io::stdio::_print\n",
+      "  11: _run_user_code_6\n",
+      "  12: evcxr::runtime::Runtime::run_loop\n",
+      "  13: evcxr::runtime::runtime_hook\n",
+      "  14: evcxr_jupyter::main\n",
+      "  15: std::sys_common::backtrace::__rust_begin_short_backtrace\n",
+      "  16: std::rt::lang_start::{{closure}}\n",
+      "  17: std::rt::lang_start_internal\n",
+      "  18: _main\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "Subprocess terminated with status: signal: 6 (SIGABRT)",
+     "output_type": "error",
+     "traceback": [
+      "Subprocess terminated with status: signal: 6 (SIGABRT)"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    use std::slice;\n",
+    "\n",
+    "    let address = 0x01234usize;\n",
+    "    // @audit-ok : Why is the address printed as 0x1234 => 4660\n",
+    "    // - how is the address 0x01234usize => 4660\n",
+    "    // ANSWER :\n",
+    "    // 0*16^4 + 1*16^3 + 2*16^2 + 3*16^1 + 4*16^0\n",
+    "    // =    0 + 4096   + 512    + 48     + 4 = 4660\n",
+    "    println!(\"address dec : {}\", address);\n",
+    "    println!(\"address hex : {:x}\", address);\n",
+    "    let r = address as *mut i32;\n",
+    "\n",
+    "    let values: &[i32] = unsafe {\n",
+    "        slice::from_raw_parts_mut(r, 10000)\n",
+    "    };\n",
+    "\n",
+    "    // trying to print the value causes a segfault\n",
+    "    // - Segmentation fault.\n",
+    "    // 0: backtrace::capture::Backtrace::new\n",
+    "    // 1: evcxr::runtime::Runtime::install_crash_handlers::segfault_handler\n",
+    "    // 2: __platform_memmove\n",
+    "    // ...\n",
+    "    println!(\"{:?}\", values);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-7: Creating a slice from an arbitrary memory location\n",
+    "\n",
+    "We don’t own the memory at this arbitrary location, and there is no guarantee  \n",
+    "that the slice this code creates contains valid i32 values. Attempting to use  \n",
+    "values as though it’s a valid slice results in undefined behavior."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using `extern` Functions to Call External Code\n",
+    "\n",
+    "Sometimes, your Rust code might need to interact with code written in another  \n",
+    "language. For this, Rust has the keyword extern that facilitates the creation  \n",
+    "and use of a Foreign Function Interface (FFI). An FFI is a way for a programming  \n",
+    "language to define functions and enable a different (foreign) programming  \n",
+    "language to call those functions.\n",
+    "\n",
+    "Listing 19-8 demonstrates how to set up an integration with the abs function  \n",
+    "from the C standard library. Functions declared within extern blocks are always  \n",
+    "unsafe to call from Rust code. The reason is that other languages don’t enforce  \n",
+    "Rust’s rules and guarantees, and Rust can’t check them, so responsibility falls  \n",
+    "on the programmer to ensure safety.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Absolute value of -3 according to C: 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    // Jupyter cell errors if we try to run this cell multiple times\n",
+    "    // - [E0428] Error: the name `abs` is defined multiple times\n",
+    "    // - so we will enclose this in a cell block\n",
+    "    extern \"C\" {\n",
+    "        // abs is an actual C function???\n",
+    "        // - @audit : How do I get a list of other available C functions?\n",
+    "        fn abs(input: i32)->i32;\n",
+    "    }\n",
+    "\n",
+    "    unsafe {\n",
+    "        println!(\"Absolute value of -3 according to C: {}\", abs(-3));\n",
+    "    }\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-8: Declaring and calling an extern function defined in another  \n",
+    "language\n",
+    "\n",
+    "Within the extern \"C\" block, we list the names and signatures of external  \n",
+    "functions from another language we want to call. The \"C\" part defines which  \n",
+    "application binary interface (ABI) the external function uses: the ABI defines  \n",
+    "how to call the function at the assembly level. The \"C\" ABI is the most common  \n",
+    "and follows the C programming language’s ABI."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### -- Calling Rust Functions from Other Languages --\n",
+    "\n",
+    "We can also use extern to create an interface that allows other languages to  \n",
+    "call Rust functions. Instead of creating a whole extern block, we add the  \n",
+    "extern keyword and specify the ABI to use just before the fn keyword for the  \n",
+    "relevant function. We also need to add a #[no_mangle] annotation to tell the  \n",
+    "Rust compiler not to mangle the name of this function. Mangling is when a  \n",
+    "compiler changes the name we’ve given a function to a different name that  \n",
+    "contains more information for other parts of the compilation process to consume  \n",
+    "but is less human readable. Every programming language compiler mangles names  \n",
+    "slightly differently, so for a Rust function to be nameable by other languages,  \n",
+    "we must disable the Rust compiler’s name mangling.\n",
+    "\n",
+    "In the following example, we make the call_from_c function accessible from C  \n",
+    "code, after it’s compiled to a shared library and linked from C:\n",
+    "\n",
+    "```rust\n",
+    "#[no_mangle]\n",
+    "pub extern \"C\" fn call_from_c() {\n",
+    "    println!(\"Just called a Rust function from C!\");\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "> This usage of extern does not require unsafe.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "#[no_mangle]\n",
+    "pub extern \"C\" fn call_from_c() {\n",
+    "    println!(\"Just called a Rust function from C!\");\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Accessing or Modifying a Mutable Static Variable\n",
+    "\n",
+    "In this book, we’ve not yet talked about global variables, which Rust does  \n",
+    "support but can be problematic with Rust’s ownership rules. If two threads are  \n",
+    "accessing the same mutable global variable, it can cause a data race.\n",
+    "\n",
+    "In Rust, global variables are called static variables. Listing 19-9 shows an  \n",
+    "example declaration and use of a static variable with a string slice as a value.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name is : Hello, world!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "static HELLO_WORLD: &str = \"Hello, world!\";\n",
+    "\n",
+    "{\n",
+    "    println!(\"name is : {}\", HELLO_WORLD);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-9: Defining and using an immutable static variable\n",
+    "\n",
+    "Static variables are similar to constants, which we discussed in the  \n",
+    "“Differences Between Variables and Constants” section in Chapter 3. The names  \n",
+    "of static variables are in SCREAMING_SNAKE_CASE by convention. Static variables  \n",
+    "can only store references with the 'static lifetime, which means the Rust  \n",
+    "compiler can figure out the lifetime and we aren’t required to annotate it  \n",
+    "explicitly. Accessing an immutable static variable is safe.\n",
+    "\n",
+    "A subtle difference between constants and immutable static variables is that :  \n",
+    "- values in a static variable have a fixed address in memory.  \n",
+    "- Using the value will always access the same data. \n",
+    "- Constants, on the other hand, are allowed to duplicate their data whenever  \n",
+    "they’re used.  \n",
+    "- Another difference is that static variables can be mutable.  \n",
+    "\n",
+    "Accessing and modifying mutable static variables is unsafe. Listing 19-10 shows  \n",
+    "how to declare, access, and modify a mutable static variable named COUNTER.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COUNTER : 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "static mut COUNTER: u32 = 0;\n",
+    "\n",
+    "fn add_to_count(inc: u32) {\n",
+    "    unsafe {\n",
+    "        COUNTER += inc;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    add_to_count(3);\n",
+    "\n",
+    "    unsafe {\n",
+    "        println!(\"COUNTER : {}\", COUNTER);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-10: Reading from or writing to a mutable static variable is unsafe\n",
+    "\n",
+    "As with regular variables, we specify mutability using the mut keyword. Any  \n",
+    "code that :  \n",
+    "- reads or writes from COUNTER \n",
+    "- must be within an unsafe block.  \n",
+    "\n",
+    "This code compiles and prints COUNTER: 3 as we would expect because it’s single  \n",
+    "threaded. Having multiple threads access COUNTER would likely result in data  \n",
+    "races.\n",
+    "\n",
+    "With mutable data that is globally accessible, it’s difficult to ensure there  \n",
+    "are no data races, which is why Rust considers mutable static variables to be  \n",
+    "unsafe. Where possible, it’s preferable to use the concurrency techniques and  \n",
+    "thread-safe smart pointers we discussed in Chapter 16 so the compiler checks  \n",
+    "that data accessed from different threads is done safely."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementing an Unsafe Trait\n",
+    "\n",
+    "We can use unsafe to implement an unsafe trait. A trait is unsafe when :  \n",
+    "\n",
+    "- at least one of its methods has some invariant that the compiler can’t verify.  \n",
+    "\n",
+    "We declare that a trait is unsafe by :  \n",
+    "- adding the unsafe keyword before trait and  \n",
+    "- marking the implementation of the trait as unsafe too, \n",
+    "\n",
+    "> as shown in Listing 19-11.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unsafe trait Foo {\n",
+    "    // methods go here\n",
+    "}\n",
+    "\n",
+    "unsafe impl Foo for i32 {\n",
+    "    // method implementations go here\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    // main calls here\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-11: Defining and implementing an unsafe trait\n",
+    "\n",
+    "By using unsafe impl, we’re promising that we’ll uphold the invariants that the  \n",
+    "compiler can’t verify.\n",
+    "\n",
+    "As an example, recall the Sync and Send marker traits we discussed in the  \n",
+    "“Extensible Concurrency with the Sync and Send Traits” section in Chapter 16:  \n",
+    "the compiler implements these traits automatically if our types are composed  \n",
+    "entirely of Send and Sync types. If we implement a type that contains a type  \n",
+    "that is not Send or Sync, such as raw pointers, and we want to mark that type  \n",
+    "as Send or Sync, we must use unsafe. Rust can’t verify that our type upholds  \n",
+    "the guarantees that it can be safely sent across threads or accessed from  \n",
+    "multiple threads; therefore, we need to do those checks manually and indicate  \n",
+    "as such with unsafe."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Accessing Fields of a Union\n",
+    "\n",
+    "The final action that works only with unsafe is accessing fields of a union. A  \n",
+    "union is similar to a struct, but only one declared field is used in a  \n",
+    "particular instance at one time. Unions are primarily used to interface with  \n",
+    "unions in C code. Accessing union fields is unsafe because Rust can’t guarantee  \n",
+    "the type of the data currently being stored in the union instance. You can  \n",
+    "learn more about unions in the Rust Reference."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### When to Use Unsafe Code\n",
+    "\n",
+    "Using unsafe to take one of the five actions (superpowers) just discussed isn’t  \n",
+    "wrong or even frowned upon. But it is trickier to get unsafe code correct  \n",
+    "because the compiler can’t help uphold memory safety. When you have a reason to  \n",
+    "use unsafe code, you can do so, and having the explicit unsafe annotation makes  \n",
+    "it easier to track down the source of problems when they occur."
+   ]
   }
  ],
  "metadata": {
