ch_18_pmatching - refeed 3 `_` NO BINDING

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_18_patterns_and_matching.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_18_patterns_and_matching.ipynb
@@ -2043,7 +2043,7 @@
     "We’ve used the `underscore` as a `wildcard` pattern that will :  \n",
     "\n",
     "- `match any value` \n",
-    "- but `not bind to the value``  \n",
+    "- but `not bind to the value`  \n",
     "\n",
     "This is especially useful as : \n",
     "\n",
@@ -2058,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2078,12 +2078,15 @@
        "()"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "// the first argument is an underscore and serves as\n",
+    "// - a place holder for a value that we don't need\n",
+    "// - does NOT bind to the value so we can't use it anyways\n",
     "fn foo(_: i32, y: i32){\n",
     "    println!(\"This code only uses the y parameter: {}\", y);\n",
     "}\n",
@@ -2099,16 +2102,27 @@
    "source": [
     "> Listing 18-17: Using _ in a function signature\n",
     "\n",
-    "This code will completely ignore the value 3 passed as the first argument, and  \n",
-    "will print This code only uses the y parameter: 4.\n",
+    "#### -- 'underscore' will NOT BIND to the value, it's a PLACEHOLDER --\n",
     "\n",
-    "In most cases when you no longer need a particular function parameter, you would  \n",
-    "change the signature so it doesn’t include the unused parameter. Ignoring a  \n",
-    "function parameter can be especially useful in cases when, for example, you're  \n",
-    "implementing a trait when you need a certain type signature but the function  \n",
-    "body in your implementation doesn’t need one of the parameters. You then avoid  \n",
-    "getting a compiler warning about unused function parameters, as you would if  \n",
-    "you used a name instead."
+    "This code will :  \n",
+    "\n",
+    "- `completely` ignore the value '3' passed as the first argument,  \n",
+    "- and will print `This code only uses the y parameter: 4.`\n",
+    "\n",
+    "In most cases when you no longer need a particular function parameter, you  \n",
+    "would :  \n",
+    "\n",
+    "- change the signature so it doesn’t include the unused parameter.  \n",
+    "\n",
+    "Ignoring a function parameter can be especially useful in cases when, for  \n",
+    "example :  \n",
+    "\n",
+    "- you're implementing a trait when you need a certain type signature  \n",
+    "- but the function body in your implementation doesn’t need one of the  \n",
+    "parameters.  \n",
+    "\n",
+    "You then avoid getting a compiler warning about unused function parameters, as  \n",
+    "you would if you used a name instead."
    ]
   },
   {
@@ -2117,17 +2131,22 @@
    "source": [
     "### Ignoring Parts of a Value with Nested _\n",
     "\n",
-    "We can also use _ inside another pattern to ignore just part of a value, for  \n",
+    "We can also use `_` inside another pattern to ignore just part of a value, for  \n",
     "example, when we want to test for only part of a value but have no use for the  \n",
-    "other parts in the corresponding code we want to run. Listing 18-18 shows code  \n",
-    "responsible for managing a setting’s value. The business requirements are that  \n",
-    "the user should not be allowed to overwrite an existing customization of a  \n",
-    "setting but can unset the setting and give it a value if it is currently unset."
+    "other parts in the corresponding code we want to run.  \n",
+    "\n",
+    "Listing 18-18 shows code responsible for managing a setting’s value. The  \n",
+    "business requirements are that : \n",
+    "\n",
+    "- the user should not be allowed to overwrite an existing customization of a  \n",
+    "setting  \n",
+    "- but can unset the setting  \n",
+    "- and give it a value if it is currently unset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2148,7 +2167,7 @@
        "()"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2178,27 +2197,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Listing 18-18: Using an underscore within patterns that match Some variants  \n",
-    "when we don’t need to use the value inside the Some\n",
+    "> Listing 18-18: Using an underscore within patterns that match `Some` variants  \n",
+    "when we don’t need to use the value inside the `Some`\n",
     "\n",
-    "This code will print Can't overwrite an existing customized value and then  \n",
-    "setting is Some(5). In the first match arm, we don’t need to match on or use  \n",
-    "the values inside either Some variant, but we do need to test for the case when  \n",
-    "setting_value and new_setting_value are the Some variant. In that case, we  \n",
-    "print the reason for not changing setting_value, and it doesn’t get changed.\n",
+    "#### -- `_` as a Catch all to update settings (current || new) is `None` --\n",
     "\n",
-    "In all other cases (if either setting_value or new_setting_value are None)  \n",
-    "expressed by the _ pattern in the second arm, we want to allow  \n",
-    "new_setting_value to become setting_value.\n",
+    "This code will print :  \n",
     "\n",
-    "We can also use underscores in multiple places within one pattern to ignore  \n",
-    "particular values. Listing 18-19 shows an example of ignoring the second and  \n",
-    "fourth values in a tuple of five items."
+    "- `Can't overwrite an existing customized value` and then  \n",
+    "- `setting is Some(5)`.  \n",
+    "\n",
+    "In the first match arm, we :  \n",
+    "\n",
+    "- don’t need to match on or use the values inside either `Some` variant,  \n",
+    "- but we do need to test for the case when `setting_value` and  \n",
+    "`new_setting_value` are the Some variant.  \n",
+    "\n",
+    "In that case, we print the reason for not changing `setting_value`, and it  \n",
+    "doesn’t get changed.\n",
+    "\n",
+    "In all other cases :  \n",
+    "\n",
+    "- (if either `setting_value` or `new_setting_value` are `None`)  \n",
+    "- expressed by the `_` pattern in the second arm,  \n",
+    "- we want to allow `new_setting_value` to become `setting_value\n",
+    "\n",
+    "We can also use `underscores` in :  \n",
+    "\n",
+    "- multiple places within one pattern  \n",
+    "- to ignore particular values.  \n",
+    "\n",
+    "> Listing 18-19 shows an example of ignoring the second and fourth values in a  \n",
+    "tuple of five items."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2218,7 +2253,7 @@
        "()"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2227,6 +2262,7 @@
     "{\n",
     "    let numbers = (2, 4, 8, 16, 32);\n",
     "\n",
+    "    // using `_` to arbitrarily ignore holes in a list lol\n",
     "    match numbers {\n",
     "        (first, _, third, _, fifth) => {\n",
     "            println!(\"Some numbers: {}, {}, {}\", first, third, fifth);\n",
@@ -2241,18 +2277,32 @@
    "source": [
     "> Listing 18-19: Ignoring multiple parts of a tuple\n",
     "\n",
-    "This code will print Some numbers: 2, 8, 32, and the values 4 and 16 will be  \n",
-    "ignored.\n",
+    "#### -- `_` to arbitrarily ignore HOLES in a given `List` --\n",
+    "\n",
+    "This code will print :  \n",
+    "- `Some numbers: 2, 8, 32,`  \n",
+    "- and the values '4' and '16' will be ignored.\n",
     "\n",
     "### Ignoring an Unused Variable by Starting Its Name with _\n",
     "\n",
-    "If you create a variable but don’t use it anywhere, Rust will usually issue a  \n",
-    "warning because an unused variable could be a bug. However, sometimes it’s  \n",
-    "useful to be able to create a variable you won’t use yet, such as when you’re  \n",
-    "prototyping or just starting a project. In this situation, you can tell Rust  \n",
-    "not to warn you about the unused variable by starting the name of the variable  \n",
-    "with an underscore. In Listing 18-20, we create two unused variables, but when  \n",
-    "we compile this code, we should only get a warning about one of them.\n",
+    "If you :  \n",
+    "\n",
+    "- create a `variable`  \n",
+    "- but `don’t use it anywhere`,  \n",
+    "- Rust will usually issue a `warning` because an unused variable could be a bug.  \n",
+    "\n",
+    "However, sometimes it’s useful to be able :  \n",
+    "\n",
+    "- to create a variable you won’t use yet,  \n",
+    "- such as when you’re prototyping or just starting a project.  \n",
+    "\n",
+    "In this situation, you can tell Rust : \n",
+    "\n",
+    "- `not to warn` you about the unused variable by `starting the name` of the  \n",
+    "variable with an `underscore`.  \n",
+    "\n",
+    "In Listing 18-20, we create two unused variables, but when we compile this code,  \n",
+    "we should only get a warning about one of them.\n",
     "\n",
     "> Filename: src/main.rs\n",
     "\n"
@@ -2260,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2273,7 +2323,7 @@
        "()"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2282,6 +2332,7 @@
     "{\n",
     "    let _x = 5; // prefixing with '_' avoids unused variable warning\n",
     "    let y = 10;\n",
+    "    // @audit-ok : We don't get a `warning` because we are in a Jupyter cell\n",
     "}"
    ]
   },
@@ -2289,19 +2340,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Listing 18-20: Starting a variable name with an underscore to avoid getting  \n",
-    "unused variable warnings\n",
+    "> Listing 18-20: Starting a variable `name with an underscore` to avoid getting  \n",
+    "`unused variable warnings`\n",
     "\n",
-    "Here we get a warning about not using the variable y, but we don’t get a warning  \n",
-    "about not using _x.\n",
+    "#### -- `prefixing` var name with `_` skips `warning` ... --\n",
     "\n",
-    "Note that there is a subtle difference between using only _ and using a name  \n",
+    "Here we get :  \n",
+    "- a `warning` about not using the variable `y`,  \n",
+    "- but we `don’t get a warning` about not using `_x`.\n",
+    "\n",
+    "#### -- but still gets `binded` unlike `_`  --\n",
+    "\n",
+    "Note that there is a subtle difference between using only `_` and using a name  \n",
     "that starts with an underscore :  \n",
     "\n",
-    "- The syntax _x still binds the value to the  variable, \n",
-    "- whereas _ doesn’t bind at all.  \n",
+    "- The syntax `_x` still `binds the value` to the  variable, \n",
+    "- whereas `_` `doesn’t bind` at all.  \n",
     "\n",
-    "To show a case where this distinction matters, Listing 18-21 will provide us  \n",
+    "> To show a case where this distinction matters, Listing 18-21 will provide us  \n",
     "with an error."
    ]
   },
@@ -2363,13 +2419,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Listing 18-21: An unused variable starting with an underscore still binds the  \n",
+    "> Listing 18-21: An unused variable starting with an underscore still binds the  \n",
     "value, which might take ownership of the value\n",
     "\n",
-    "We’ll receive an error because the s value will still be moved into _s, which  \n",
-    "prevents us from using s again. However, using the underscore by itself doesn’t  \n",
-    "ever bind to the value. Listing 18-22 will compile without any errors because s  \n",
-    "doesn’t get moved into _."
+    "#### -- ERROR - because `s` is binded to `_s` and `moved` --\n",
+    "\n",
+    "We’ll receive an error because :  \n",
+    "\n",
+    "- the `s` value will still be `moved` into `_s`,  \n",
+    "- which prevents us from using `s` again.  \n",
+    "- However, using the underscore by itself `doesn’t ever bind to the value`.  \n",
+    "\n",
+    "> Listing 18-22 will compile without any errors because `s` doesn’t get `moved`  \n",
+    "into `_`."
    ]
   },
   {
@@ -2422,7 +2484,12 @@
    "source": [
     "> Listing 18-22: Using an underscore does not bind the value\n",
     "\n",
-    "This code works just fine because we never bind s to anything; it isn’t moved.\n",
+    "#### -- using `_` does NOT bind `s`, so `NO move == NO ERROR` --\n",
+    "\n",
+    "This code works just fine because :  \n",
+    "\n",
+    "- we never bind `s` to anything;  \n",
+    "- it isn’t `moved`\n",
     "\n",
     "### Ignoring Remaining Parts of a Value with `..`\n",
     "\n",
